# picotron

./: .gitignore  LICENSE  README.md  generate.py  notebook.ipynb  pyproject.toml  run_picotrain.bat  run_picotrain.sh  smoke_test.py  train.py
examples/: 1.2B.yaml  122M.yaml  262M.yaml  26M.yaml  52M.yaml  563M.yaml  deepseek.yaml  gemma.yaml  gpt.yaml  llama.yaml  mistral.yaml  qwen.yaml
exclude/: test_dual_gpu.py
insp/: overview.html  quickstart.html
insp/static/js/: 4877a6cc02b76319.js  4900d752abd0cb55.js  8244ada7c7d2fc35.js  98128c3eb1784ca4.js  ef670e68c68ca2fc.js  f3bb4452657431b0.js  f6a5e6a711b35d06.js  turbopack-5a436a4f17a96709.js
picotron/: __init__.py  config.py  trainer.py
picotron/data/: __init__.py  async_tokenizer.py  dataloader.py  packing.py  pipeline_cli.py  preprocess.py  sampler.py  tokenized_dataset.py
picotron/distillation/: __init__.py  losses.py  trainer.py
picotron/kernels/: triton_kernels.py
picotron/kernels/triton_kernels/: __init__.py  attention.py  blocks.py  core.py  optimizers.py
picotron/models/: __init__.py  llama.py
picotron/nn/: attention.py  block.py  deltanet.py  mixers.py  mlp.py  norm.py  recompute.py  rope.py
picotron/optim/: zero.py
picotron/parallel/: __init__.py  context.py  expert.py  fsdp.py  pipeline.py  tensor.py
picotron/peft/: __init__.py  lora.py  peft_model.py  sft_trainer.py
picotron/rlhf/: __init__.py  dataset.py  loss.py  ppo.py  trainer.py
picotron/trainer/: benchmark.py  callbacks.py  metrics.py
picotron/training/: __init__.py  benchmark.py  callbacks.py
picotron/utils/: __init__.py  dtype.py  logging.py
scratch/: download_fineweb.py
website/: index.css  index.html  index.js
website/docs/: alignment.md  architectures.md  configuration.md  environments.md  pretraining.md  rlhf.md  scaling.md
website/static/js/: 0d7642c224c034bf.js  0f9b1a3448d7fdc8.js  (+2 more)
