[project]
name = "picotron"
version = "0.1.0"
description = "Lightweight clean-room LLM training framework with zero GPU-specific hard dependencies."
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "pyyaml",
    "numpy",
    "safetensors",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
