[project]
name = "picotron"
version = "0.1.0"
description = "Lightweight clean-room LLM training framework with zero GPU-specific hard dependencies."
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "pyyaml",
    "numpy",
    "safetensors",
    "tqdm",
]

[tool.setuptools]
packages = [
    "picotron",
    "picotron.data",
    "picotron.models",
    "picotron.nn",
    "picotron.kernels",
    "picotron.kernels.triton_kernels",
    "picotron.peft",
    "picotron.rlhf",
    "picotron.parallel",
    "picotron.trainer",
    "picotron.distillation",
    "picotron.utils"
]

[project.scripts]
picotron-preprocess = "picotron.data.preprocess:main"
picotron-train = "train:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
